# TAED2_SignAI

./: .gitignore  Makefile  README.md  data.dvc  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
data/: class_map.txt  class_map.txt.dvc  create_random_subset.py  create_random_subset.py.dvc  data.yaml.dvc  mapping_classes.py  mapping_classes.py.dvc  raw.dvc
data/behavioural_testing/00001/: 00001.txt
data/test_modified/one/: 00009.txt
data/test_sample/: labels.cache
data/test_sample/labels/: 00397.txt  00406.txt
docs/: datasetcard.md  modelcard.md
mlruns/0/: meta.yaml
notebooks/: log_an_experiment.ipynb  train.ipynb  train.py
reports/codecarbon_out/: emissions.csv
runs/yolov8-20251015-173625/: args.yaml
runs/yolov8-20251015-173711/: args.yaml
runs/yolov8-20251015-174400/: args.yaml
runs/yolov8-20251015-174536/: args.yaml
runs/yolov8-20251015-183708/: args.yaml
scr/: config.py  dataset.py  features.py  plots.py
scr/app/: api.py  frontend.py  test_api.py  test_utils.py  utils.py
scr/modeling/: dvc.yaml  predict.py  train.py
scr/modeling/runs/yolov8-20251009-215936/: args.yaml
scr/modeling/runs/yolov8-20251009-220520/: args.yaml
scr/modeling/runs/yolov8-20251009-222238/: args.yaml
scr/modeling/runs/yolov8-20251009-233249/: args.yaml  results.csv
scr/modeling/runs/yolov8-20251009-235519/: args.yaml  results.csv
scr/modeling/runs/yolov8-20251011-160451/: args.yaml  results.csv
scr/tests/: behavioural_testing.py  conftest.py  test_data.py  test_model.py  test_model_train.py  test_predict.py  test_predict_quality.py
(+63 files in other folders)
